[package]
name = "query_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "run_tests"
path = "tests/main.rs"

[dependencies]
syn = { version = "1.0.81", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

